# ic-mini-terminal

./: .gitignore  Cargo.toml  LOC  README.md  Render.html  Types.html  dfx.json  index.html  moc-build.sh  package-set.dhall  package-set.json  service.did  test.sh  textEdit.sh  vessel.dhall  vessel.json
.github/workflows/: ci.yml  release.yml
example/: Main.mo
example/Dungeon/: Draw.mo  Main.mo  README.md  State.mo  Types.mo
examples/counter/: Counter.mo
examples/maze-game/: Draw.mo  MazeGame.mo  State.mo  Types.mo
examples/mazeGame/: Draw.mo  Main.mo  README.md  State.mo  Types.mo
examples/textEdit/: Draw.mo  Main.mo  State.mo  Types.mo
glyph/: Mono5x5.html  Types.html
icmt/: Cargo.toml
icmt-core/: Cargo.toml
icmt-core/src/: mod.rs  types.rs
icmt-sdl2/: Cargo.toml
icmt-sdl2/lib/: cli.rs  color.rs  error.rs  mod.rs
icmt-sdl2/src/lib/: keyboard.rs  mod.rs  types.rs  write.rs
icmt-web/: Cargo.toml
icmt-web/src/: lib.rs
icmt/src/lib/: types.rs
scripts/: MirrorGarden-demo.sh  aliceTextEditor.sh  bobConnects.sh  bobTextEditor.sh  decode-events.sh  decode-graphics.sh  dfx-start-background.sh  dfx-start-wait.sh  icgt-kill.sh  icmt-kill.sh  mazeGame.sh  runTests.sh  textEdit.sh  textEditLocal.sh
src/: Render.mo  Types.mo
src/glyph/: Mono5x5.mo  Types.mo
src/lib/: cli.rs  draw.rs  error.rs  keyboard.rs  mod.rs  render.rs  types.rs  updater.rs  write.rs
src/terminal/: Terminal.mo
terminal/: Terminal.html
test/: Counter.mo  Counter2D.mo  Fib.mo  Grid.mo  Main.mo  Window.mo
test/input/: icmt-2021-01-13T15:01:34.607150-07:00-320x240-events.did  icmt-2021-01-13T15:01:34.607150-07:00-320x240-events.did.txt
