[package]
name = "icgt"
version = "0.1.0"
authors = ["Matthew A Hammer <pubmah@nym.hush.com>"]
edition = "2018"


[dependencies]
actix = "0.10.0-alpha.3"
futures-util = "0.3.5"
tokio = "0.2.21"
clap = "2.33"
crossbeam = "0.7.3"
structopt = "0.2"
log = "0.4"
env_logger = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.9"
serde_json = "1.0"
sdl2 = "0.32"
delay = "0.1.0"
candid = { git = "https://github.com/dfinity/candid" }
num-bigint = "0.2.6"
num-traits = "0.2.6"


## DFINITY Engineers: Update this line for your checkout of the SDK repo:
ic-agent = { path = "/Users/eftychis/Code/dfinity/sdk/src/agent/rust" }

[lib]
name = "icgt"
path = "src/lib/mod.rs"
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
plugin = false         # Used as a compiler plugin (deprecated).
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
edition = "2018"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).

[[bin]]
name = "icgt"
path = "src/bin/icgt.rs"
