[package]
name = "icgt"
version = "0.1.0"
authors = ["Matthew A Hammer <pubmah@nym.hush.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
structopt = "0.2"
log = "0.4"
env_logger = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.9"
serde_json = "1.0"
sdl2 = "0.32"
tokio = "0.2.22"
delay = "0.3.0"
num-bigint = "0.2.6"
num-traits = "0.2.6"
futures = "0.3.5"
ring = "0.16.15"

## Check out this repo: https://github.com/dfinity-lab/agent-rust/tree/next/ic-agent
# ic-agent = { path = "/Users/matthew/dfn/agent-rust/ic-agent" }
# ic-types = { path = "/Users/matthew/dfn/agent-rust/ic-types" }
ic-agent = "0.1.0"
ic-types = "0.1.0"
candid = "0.6.7"

[lib]
name = "icgt"
path = "src/lib/mod.rs"
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
plugin = false         # Used as a compiler plugin (deprecated).
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
edition = "2015"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).

[[bin]]
name = "icgt"
path = "src/bin/icgt.rs"
