[package]
name = "icmt_core"
version = "0.1.0"
authors = ["Matthew A Hammer <pubmah@nym.hush.com>"]
edition = "2018"
description = "The Internet Computer Mini Terminal.  Live input and output for IC canisters."
homepage = "https://docs.rs/icmt"
documentation = "https://docs.rs/icmt"
repository = "https://github.com/matthewhammer/ic-mini-terminal"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.9"
serde_json = "1.0"
num-bigint = "0.2.6"
num-traits = "0.2.6"
ic-types = "0.1.3"
candid = "0.6"

[lib]
name = "icmt_core"
path = "src/mod.rs"
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
plugin = false         # Used as a compiler plugin (deprecated).
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
edition = "2018"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).
