[package]
name = "icmt-web"
version = "0.1.0"
authors = ["Matthew Hammer <matthew.hammer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
icmt = { path = "../icmt" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
